site/css/wea.css
/* ... */
#searchResults{
    margin-top:2em;
}

#searchResults.closed{
    opacity:0;
}

#searchResults.showing{
    opacity: 1;
    transition: opacity .75s;
}


.snippet{
    padding:.5rem;
    border: 1px dotted black;
}
.highlight{
    background: rgba(255,170,235,0.4);
}

.highlight.deselected{
    background:inherit;
}


/********* HEADER SEARCH ********/


#headerSearch{
    display:none;
}

#headerSearch.open,
#headerSearch:target,
.nav_option:target,
.nav_option.open{
    display:flex;
}


/*body:not(.JS) .search_icon{
  display:none;
}*/


#headerSearch > div{
        padding: 1rem;
        display:flex;
        margin:0;
}

#headerSearch > #headerSearchResults{
    padding:0;
}




header #siteMap{
    flex-direction:column;
    font-size:90%;
    
}

#siteMap > div{
    display:none;
}

#siteMap > div.result{
    display:block;
    padding: 1em 2rem;
    background: var(--wea-additional-info-bg-color);
    margin: .5rem 1rem;
    align-self:normal;
    border: 1px solid transparent;
    
}

#siteMap > div.result:hover,
#siteMap > div.result:focus{
    border:1px solid var(--wea-pink);
    outline:none;
}


div.result > .item_info {
    font-size:90%;
    opacity:.9;
}

.item_info > span + span::before{
    content: "|";
    padding:.5rem;
}
div.result > a{
    display:inline-block;
    height:100%;
    width:100%;
}
div.result:hover > a,
div.result:hover > a:hover,
div.result:focus > a{
    color: var(--wea-pink);
}

#headerSearchInput{
    font-size:120%;
    width:50%;
    max-width:100%;
    border:none;
}


#headerAdvancedSearchBtn{
    grid-area:headerAdvancedSearchBtn;
    font-size:80%;
    display:inherit;
   
    
}
#headerAdvancedSearchBtn > a{
        width:auto;
    padding:.25rem;
}

#headerSearchResults{
    grid-area:headerSearchResults;
}


/****************************************************************** INFO/METADATA BLOCKS ******/

#metadata{
    display:flex;
    max-height:25rem;
    flex-flow:column wrap;
    max-width:40rem;
    
}

#metadata > div,
#additional_info .content> div{
    min-width:0;
    flex-basis:content;
    padding:.5rem .5rem .5rem 0;
}


#metadata> > div{
    max-width:14rem;
}


    
.breadcrumb > a:hover{
    color: #940049;
}


/****************************************************************** FOOTER ******/

footer{
    background:var(--wea-footer-bg-color);
    color:white;
    min-height:5rem;
    display:flex;
    flex-direction:row;
    justify-content:center;
    align-items:center;
}



a, a:visited{
    color:#2A5DB0;
}



.showTitle{
    border-bottom: 1px dotted;
    border-bottom-color: inherit;
}

.JS .showTitle{
    cursor:pointer;
}

.breadcrumb + h2 {
    margin-top:.2rem;
}


#info, #text{
    margin: 0 auto;
}

#mainBody:not(.docBornDigitalListing) > #text{
    max-width:50rem;
}

#info{
      background-color: var(--wea-info-bg-color);
      overflow:hidden;
      padding: 5% 8% 3% 8%;
      margin:0 auto;
      }

#mainBody:not(.docBornDigitalExhibit) > #info{
     display:grid;
      grid-template-areas:
      "facsimile metadata_container metadata_container metadata_container"
      "facsimile metadata_container metadata_container metadata_container"
      "facsimile metadata_container metadata_container metadata_container"
      "additional_info additional_info additional_info additional_info";
      
      grid-template-columns: minmax(8rem, 18rem) 58% 1fr 1fr;
      grid-column-gap:1.5rem;
      grid-row-gap:1.5rem;
}
#relatedItems{
    grid-area: relatedItems;
}

#relatedItems .content{
    flex-direction:row!important;
}

#relatedItems .content > div{
    max-width:8rem;
    margin:1em;
    padding:1em;
}

#relatedItems .content > div > *{
    margin:0 auto;
}


#relatedItems .metadataLabel{
    padding-bottom:.25rem;
}

.content img{
    max-width:8rem;
}

#mainBody{
 /* We need to margin-top if we do a sticky header */
 /* margin-top: 2.5rem;*/
  padding:0 10% 5% 10%;
  flex:1;
  margin-top: var(--body-margin-top);
}

#facsimile{
    grid-area: facsimile;
    width: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;
}

#metadata_container{
    grid-area: metadata_container;
}


/****************************************************************** MEDIA GALLERY ********/

div[data-type='listFigure']{
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    
}

div[data-type="listFigure"] > div{
    width:8rem;
    padding:5%;
    margin:.5rem;
    font-size:90%;
    border:1px solid black;
}

div[data-type="listFigure"] > div:target{
    border: 1px solid var(--wea-pink);
}


div[data-type='listFigure'] img{
    max-width:8rem;
    height:auto;
}


/* ***************************************************** ADDITIONAL INFO PANEL ********** */
#additional_info{
    grid-area: additional_info;

   
}

#additional_info > div{
    margin-top:1rem;
    background: var(--wea-additional-info-bg-color);
    padding: 1rem;
}

#additional_info .content{
    display:flex;
    flex-flow: column;
    align-content: baseline;
    
}

#relatedItems .content{
    flex-wrap:wrap;
}

.JS .expandable.closed > .content{
    max-height:0;
    overflow:hidden;
    transition: max-height .2s ease-in-out;
    display:block;
}

.JS .expandable.open > .content{
    max-height:30rem;
    transition: max-height .2s ease-in-out;
    overflow-y:auto;
}

.JS .additionalInfoHeader{
    cursor:pointer;
    
}

.JS #additional_info > div  .additionalInfoHeader::after,
.JS #additional_info > div.closed  .additionalInfoHeader::after{
    content: "\02795";
    float:right;
    font-size:80%;
}

.JS #additional_info > div.open > .additionalInfoHeader::after{
    content:"\2796";
}




#searchButtons{
    top: 10%;
    position:fixed;
    float:left;
    
    
}

/**** LINKS ***** */

header a,
header a:visited
{
    color:inherit;
}
/* ... */

